Added quality of life improvements

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,8 @@
+if-shell " [[ $(uname -s) = Darwin ]]" {
+    unbind C-b
+    set-option -g prefix M-a
+    bind-key M-a send-prefix
+}
 set -g default-terminal "screen-256color"
 set -g mouse on
 
@@ -6,3 +11,20 @@ set-option -g focus-events on
 set-option -sa terminal-features ",screen-256color:RGB"
 
 setw -g mode-keys vi
+
+# Count panes from 1
+set -g base-index 1
+setw -g pane-base-index 1
+
+# Renumber window index number on delete
+set-option -g renumber-windows on
+
+# Remap horizontal and vertical split panes so that it is easier to remember
+bind h split-window -v
+bind v split-window -h
+unbind '"'
+unbind %
+
+# reload config file
+bind R source-file ~/.config/tmux/tmux.conf
+
