Reset key bindings to default before executing tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,13 @@
-if-shell " [[ $(uname -s) = Darwin ]]" {
+## reset key bindings first
+run-shell "~/.config/tmux/get_default_tmux.sh"
+
+if-shell "[[ -f ~/.tmux.reset.conf ]]" {
+# default key bindings found - reset to default key bindings first
+    unbind-key -a
+    source-file ~/.tmux.reset.conf
+}
+
+if-shell "[[ $(uname -s) = Darwin ]]" {
     unbind C-b
     set-option -g prefix M-a
     bind-key M-a send-prefix
