Changed status-keys to vi mode

--- a/tmux.conf
+++ b/tmux.conf
@@ -20,6 +20,7 @@ set-option -g focus-events on
 set-option -sa terminal-features ",screen-256color:RGB"
 
 setw -g mode-keys vi
+setw -g status-keys vi
 
 # Count panes from 1
 set -g base-index 1
