Fixed tmux config to generate notes for key bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,7 +10,7 @@ if-shell "[[ -f ~/.tmux.reset.conf ]]" {
 if-shell "[[ $(uname -s) = Darwin ]]" {
     unbind C-b
     set-option -g prefix M-a
-    bind-key M-a send-prefix
+    bind-key -N "Send the prefix key" M-a send-prefix
 }
 set -g default-terminal "screen-256color"
 set -g mouse on
@@ -30,11 +30,11 @@ setw -g pane-base-index 1
 set-option -g renumber-windows on
 
 # Remap horizontal and vertical split panes so that it is easier to remember
-bind h split-window -v
-bind v split-window -h
+bind -N "Split window vertically" v split-window -v
+bind -N "Split window horizontally" h split-window -h
 unbind '"'
 unbind %
 
 # reload config file
-bind R source-file ~/.config/tmux/tmux.conf
+bind -N "Re-run tmux configuration file" R source-file ~/.config/tmux/tmux.conf
 
