Changed prefix key to Ctrl-A Use zsh as shell to determine the default key bindings and notes

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,16 +1,16 @@
 ## reset key bindings first
-run-shell "~/.config/tmux/get_default_tmux.sh"
+run-shell "~/.config/tmux/get_default_tmux.zsh"
 
-if-shell "[[ -f ~/.tmux.reset.conf ]]" {
+if-shell "[[ -f ~/.tmux.zsh.reset.conf ]]" {
 # default key bindings found - reset to default key bindings first
     unbind-key -a
-    source-file ~/.tmux.reset.conf
+    source-file ~/.tmux.zsh.reset.conf
 }
 
 if-shell "[[ $(uname -s) = Darwin ]]" {
     unbind C-b
-    set-option -g prefix M-a
-    bind-key -N "Send the prefix key" M-a send-prefix
+    set-option -g prefix C-a
+    bind-key -N "Send the prefix key" C-a send-prefix
 }
 set -g default-terminal "screen-256color"
 set -g mouse on
