Updated prefix setup for all OS

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,11 +7,11 @@ if-shell "[[ -f ~/.tmux.zsh.reset.conf ]]" {
     source-file ~/.tmux.zsh.reset.conf
 }
 
-if-shell "[[ $(uname -s) = Darwin ]]" {
-    unbind C-b
-    set-option -g prefix C-a
-    bind-key -N "Send the prefix key" C-a send-prefix
-}
+## Set prefix key to Ctrl-A as it is more convenient
+unbind C-b
+set-option -g prefix C-a
+bind-key -N "Send the prefix key" C-a send-prefix
+
 set -g default-terminal "screen-256color"
 set -g mouse on
 
