--- a/tmux.conf
+++ b/tmux.conf
@@ -19,6 +19,15 @@ set-option -sg escape-time 10
 set-option -g focus-events on
 set-option -sa terminal-features ",screen-256color:RGB"
 
+# Increase scrollback buffer size from 2000 to 50000 lines
+set-option -g history-limit 50000
+
+# Increase tmux messages display duration from 750ms to 4s
+set -g display-time 4000
+
+# Refresh 'status-left' and 'status-right' more often, from every 15s to 5s
+set -g status-interval 5
+
 setw -g mode-keys vi
 setw -g status-keys vi
 
@@ -35,6 +44,22 @@ bind -N "Split window horizontally" h split-window -h
 unbind '"'
 unbind %
 
+# Faster next and previous window
+# Easier and faster switching between next/prev window
+bind -N "Select the previous window" C-p previous-window
+bind -N "Select the next window" C-n next-window
+
 # reload config file
 bind -N "Re-run tmux configuration file" R source-file ~/.config/tmux/tmux.conf
 
+#set-environment -g DEFAULT_TPM_ENV_VAR_NAME "~/.tmux/plugins/"
+# set-environment -g TPM_PLUGIN_MANAGER_PATH "~/.tmux/plugins/"
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/resurrect'
+# set -g @plugin 'tmux-plugins/continuum'
+# set -g @continuum-restore 'on'
+
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# run '~/.tmux/plugins/tpm/tpm'
+#
