--- a/tmux.conf
+++ b/tmux.conf
@@ -17,10 +17,18 @@ set -g mouse on
 
 set-option -sg escape-time 10
 set-option -g focus-events on
+set-option -g detach-on-destroy  off
+set-option -g set-clipboard on
+set-option -g terminal-overrides ",screen-256color:RGB"
 set-option -sa terminal-features ",screen-256color:RGB"
 
+
+set -g status-position top
+set -g pane-active-border-style 'fg=magenta,bg=default'
+set -g pane-border-style 'fg=brightblack,bg=default'
+
 # Increase scrollback buffer size from 2000 to 50000 lines
-set-option -g history-limit 50000
+set-option -g history-limit 100000
 
 # Increase tmux messages display duration from 750ms to 4s
 set -g display-time 4000
@@ -49,17 +57,98 @@ unbind %
 bind -N "Select the previous window" C-p previous-window
 bind -N "Select the next window" C-n next-window
 
+bind -N "Switch to next session and kill current session" C-x \
+  confirm-before -p 'kill-session #S? (y/n)' "rename-session 'DEADSESSION' \; switch-client -n \; kill-session -t 'DEADSESSION' "
+
 # reload config file
 bind -N "Re-run tmux configuration file" R source-file ~/.config/tmux/tmux.conf
 
-#set-environment -g DEFAULT_TPM_ENV_VAR_NAME "~/.tmux/plugins/"
-# set-environment -g TPM_PLUGIN_MANAGER_PATH "~/.tmux/plugins/"
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/resurrect'
-# set -g @plugin 'tmux-plugins/continuum'
-# set -g @continuum-restore 'on'
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.tmux/plugins"
+## catppuccin theme requires nerd font - I am using MesloGLDZ Nerd Font Mono
+## Installed via: 
+##    brew install --cask homebrew/cask-fonts/font-fira-mono-nerd-font
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-boot 'on'
+set -g @continuum-restore 'on'
 
+#set -g @resurrect-strategy-nvim 'session'
+# set -g @catppuccin_window_left_separator ""
+# set -g @catppuccin_window_right_separator " "
+# set -g @catppuccin_window_middle_separator " █"
+# set -g @catppuccin_window_number_position "right"
+# set -g @catppuccin_window_default_fill "number"
+# set -g @catppuccin_window_default_text "#W"
+# set -g @catppuccin_window_current_fill "number"
+# set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
+# set -g @catppuccin_status_modules_right "directory meetings date_time"
+# set -g @catppuccin_status_modules_left "session"
+# set -g @catppuccin_status_left_separator  " "
+# set -g @catppuccin_status_right_separator " "
+# set -g @catppuccin_status_right_separator_inverse "no"
+# set -g @catppuccin_status_fill "icon"
+# set -g @catppuccin_status_connect_separator "no"
+# set -g @catppuccin_directory_text "#{b:pane_current_path}"
+# set -g @catppuccin_meetings_text "#($HOME/.config/tmux/scripts/cal.sh)"
+# set -g @catppuccin_date_time_text "%H:%M"
+
+## Config 1
+# set -g @catppuccin_window_right_separator "█ "
+# set -g @catppuccin_window_number_position "right"
+# set -g @catppuccin_window_middle_separator " | "
+# set -g @catppuccin_window_default_fill "none"
+# set -g @catppuccin_window_current_fill "all"
+# set -g @catppuccin_status_modules_right "application session user host date_time"
+# set -g @catppuccin_status_left_separator "█"
+# set -g @catppuccin_status_right_separator "█"
+# set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
+
+## Config 2
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " | "
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_default_fill "none"
+set -g @catppuccin_window_default_text "#W:#{b:pane_current_path}"
+set -g @catppuccin_window_current_fill "all"
+set -g @catppuccin_window_current_text "#W:#{b:pane_current_path}"
+set -g @catppuccin_status_modules_right "application session date_time"
+set -g @catppuccin_status_left_separator  ""
+set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_right_separator_inverse "yes"
+set -g @catppuccin_status_fill "all"
+set -g @catppuccin_status_connect_separator "no"
+set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M %p"
+
+## Config 3
+# set -g @catppuccin_window_left_separator ""
+# set -g @catppuccin_window_right_separator " "
+# set -g @catppuccin_window_middle_separator " █"
+# set -g @catppuccin_window_number_position "right"
+# set -g @catppuccin_window_default_fill "number"
+# set -g @catppuccin_window_default_text "#W"
+# set -g @catppuccin_window_current_fill "number"
+# set -g @catppuccin_window_current_text "#W"
+# set -g @catppuccin_status_modules_right "directory user host session"
+# set -g @catppuccin_status_left_separator  " "
+# set -g @catppuccin_status_right_separator ""
+# set -g @catppuccin_status_right_separator_inverse "no"
+# set -g @catppuccin_status_fill "icon"
+# set -g @catppuccin_status_connect_separator "no"
+# set -g @catppuccin_directory_text "#{pane_current_path}"
+
+if-shell "tmux -f /dev/null -L temp start-server \;" {
+} {
+    if-shell "[[ $(uname) == 'Darwin' ]]" {
+        set-environment -g PATH "/opt/homebrew/bin:/bin:/usr/bin:/usr/local/bin:/sbin:/usr/sbin"
+        set-environment PATH "/opt/homebrew/bin:/bin:/usr/bin:/usr/local/bin:/sbin:/usr/sbin"
+    }
+}
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-# run '~/.tmux/plugins/tpm/tpm'
-#
+run '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tmux-resurrect/resurrect.tmux'
+run '~/.tmux/plugins/tmux-continuum/continuum.tmux'
+
