Added key binding to start a new session

--- a/tmux.conf
+++ b/tmux.conf
@@ -52,6 +52,8 @@ bind -N "Split window horizontally" h split-window -h
 unbind '"'
 unbind %
 
+bind -N "Start a new session" S new-session
+
 # Faster next and previous window
 # Easier and faster switching between next/prev window
 bind -N "Select the previous window" C-p previous-window
