--- a/tmux.conf
+++ b/tmux.conf
@@ -16,7 +16,6 @@ set -g default-terminal "screen-256color"
 set -g mouse on
 
 set-option -sg escape-time 10
-set-option -g focus-events on
 set-option -g detach-on-destroy  off
 set-option -g set-clipboard on
 set-option -g terminal-overrides ",screen-256color:RGB"
@@ -30,14 +29,7 @@ set -g pane-border-style 'fg=brightblack,bg=default'
 # Increase scrollback buffer size from 2000 to 50000 lines
 set-option -g history-limit 100000
 
-# Increase tmux messages display duration from 750ms to 4s
-set -g display-time 4000
-
-# Refresh 'status-left' and 'status-right' more often, from every 15s to 5s
-set -g status-interval 5
-
 setw -g mode-keys vi
-setw -g status-keys vi
 
 # Count panes from 1
 set -g base-index 1
@@ -53,6 +45,8 @@ unbind '"'
 unbind %
 
 bind -N "Start a new session" S new-session
+
+bind -N "Join current pane to another window" @ command-prompt -T window-target -p "Join pane #P to which window? " { join-pane -t ":%%" }
 
 # Faster next and previous window
 # Easier and faster switching between next/prev window
@@ -71,6 +65,8 @@ set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.tmux/plugins"
 ##    brew install --cask homebrew/cask-fonts/font-fira-mono-nerd-font
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-boot 'on'
@@ -151,6 +147,8 @@ if-shell "tmux -f /dev/null -L temp start-server \;" {
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tmux-sensible/sensible.tmux'
+run '~/.tmux/plugins/tmux-yank/yank.tmux'
 run '~/.tmux/plugins/tmux-resurrect/resurrect.tmux'
 run '~/.tmux/plugins/tmux-continuum/continuum.tmux'
 
