Improved the look and feel

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,8 +23,6 @@ set-option -sa terminal-features ",screen-256color:RGB"
 
 
 set -g status-position top
-set -g pane-active-border-style 'fg=magenta,bg=default'
-set -g pane-border-style 'fg=brightblack,bg=default'
 
 # Increase scrollback buffer size from 2000 to 50000 lines
 set-option -g history-limit 100000
@@ -46,7 +44,7 @@ unbind %
 
 bind -N "Start a new session" S new-session
 
-bind -N "Join current pane to another window" @ command-prompt -T window-target -p "Join pane #P to which window? " { join-pane -t ":%%" }
+bind -N "Join pane to window" @ command-prompt -T window-target -p "Join Win_#{window_index}:Pane_#P to window:" { join-pane -t ":%%" }
 
 # Faster next and previous window
 # Easier and faster switching between next/prev window
@@ -54,7 +52,9 @@ bind -N "Select the previous window" C-p previous-window
 bind -N "Select the next window" C-n next-window
 
 bind -N "Switch to next session and kill current session" C-x \
-  confirm-before -p 'kill-session #S? (y/n)' "rename-session 'DEADSESSION' \; switch-client -n \; kill-session -t 'DEADSESSION' "
+  if-shell "[[ $(tmux list-sessions | wc -l) -gt 1 ]]" {
+      confirm-before -p 'kill-session #S? (y/n)' "rename-session 'DEADSESSION' \; switch-client -n \; kill-session -t 'DEADSESSION' "
+  } { display-message "Only 1 session present - cannot kill current session"}
 
 # reload config file
 bind -N "Re-run tmux configuration file" R source-file ~/.config/tmux/tmux.conf
@@ -69,49 +69,20 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+## TODO: Consider installing vim-tmux-navigator
+#set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
 
 #set -g @resurrect-strategy-nvim 'session'
-# set -g @catppuccin_window_left_separator ""
-# set -g @catppuccin_window_right_separator " "
-# set -g @catppuccin_window_middle_separator " █"
-# set -g @catppuccin_window_number_position "right"
-# set -g @catppuccin_window_default_fill "number"
-# set -g @catppuccin_window_default_text "#W"
-# set -g @catppuccin_window_current_fill "number"
-# set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
-# set -g @catppuccin_status_modules_right "directory meetings date_time"
-# set -g @catppuccin_status_modules_left "session"
-# set -g @catppuccin_status_left_separator  " "
-# set -g @catppuccin_status_right_separator " "
-# set -g @catppuccin_status_right_separator_inverse "no"
-# set -g @catppuccin_status_fill "icon"
-# set -g @catppuccin_status_connect_separator "no"
-# set -g @catppuccin_directory_text "#{b:pane_current_path}"
-# set -g @catppuccin_meetings_text "#($HOME/.config/tmux/scripts/cal.sh)"
-# set -g @catppuccin_date_time_text "%H:%M"
-
-## Config 1
-# set -g @catppuccin_window_right_separator "█ "
-# set -g @catppuccin_window_number_position "right"
-# set -g @catppuccin_window_middle_separator " | "
-# set -g @catppuccin_window_default_fill "none"
-# set -g @catppuccin_window_current_fill "all"
-# set -g @catppuccin_status_modules_right "application session user host date_time"
-# set -g @catppuccin_status_left_separator "█"
-# set -g @catppuccin_status_right_separator "█"
-# set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
-
-## Config 2
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_middle_separator " | "
-set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_number_position "left"
 set -g @catppuccin_window_default_fill "none"
-set -g @catppuccin_window_default_text "#W:#{b:pane_current_path}"
+set -g @catppuccin_window_default_text '#{s|#{HOME}|~|:pane_current_path}' 
 set -g @catppuccin_window_current_fill "all"
-set -g @catppuccin_window_current_text "#W:#{b:pane_current_path}"
+set -g @catppuccin_window_current_text '#{s|#{HOME}|~|:pane_current_path}' 
 set -g @catppuccin_status_modules_right "application session date_time"
 set -g @catppuccin_status_left_separator  ""
 set -g @catppuccin_status_right_separator " "
@@ -120,28 +91,19 @@ set -g @catppuccin_status_fill "all"
 set -g @catppuccin_status_connect_separator "no"
 set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M %p"
 
-## Config 3
-# set -g @catppuccin_window_left_separator ""
-# set -g @catppuccin_window_right_separator " "
-# set -g @catppuccin_window_middle_separator " █"
-# set -g @catppuccin_window_number_position "right"
-# set -g @catppuccin_window_default_fill "number"
-# set -g @catppuccin_window_default_text "#W"
-# set -g @catppuccin_window_current_fill "number"
-# set -g @catppuccin_window_current_text "#W"
-# set -g @catppuccin_status_modules_right "directory user host session"
-# set -g @catppuccin_status_left_separator  " "
-# set -g @catppuccin_status_right_separator ""
-# set -g @catppuccin_status_right_separator_inverse "no"
-# set -g @catppuccin_status_fill "icon"
-# set -g @catppuccin_status_connect_separator "no"
-# set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g @catppuccin_pane_status_enabled "yes"
+set -g @catppuccin_pane_border_status "top"
+set -g @catppuccin_pane_left_separator ""
+set -g @catppuccin_pane_right_separator ""
+set -g @catppuccin_pane_middle_separator " | "
+set -g @catppuccin_pane_number_position "left"
+set -g @catppuccin_pane_default_fill "all"
+set -g @catppuccin_pane_default_text '#{s|#{HOME}|~|:pane_current_path}'
 
 if-shell "tmux -f /dev/null -L temp start-server \;" {
 } {
     if-shell "[[ $(uname) == 'Darwin' ]]" {
         set-environment -g PATH "/opt/homebrew/bin:/bin:/usr/bin:/usr/local/bin:/sbin:/usr/sbin"
-        set-environment PATH "/opt/homebrew/bin:/bin:/usr/bin:/usr/local/bin:/sbin:/usr/sbin"
     }
 }
 
@@ -149,6 +111,6 @@ if-shell "tmux -f /dev/null -L temp start-server \;" {
 run '~/.tmux/plugins/tpm/tpm'
 run '~/.tmux/plugins/tmux-sensible/sensible.tmux'
 run '~/.tmux/plugins/tmux-yank/yank.tmux'
-run '~/.tmux/plugins/tmux-resurrect/resurrect.tmux'
 run '~/.tmux/plugins/tmux-continuum/continuum.tmux'
+run '~/.tmux/plugins/tmux-resurrect/resurrect.tmux'
 
