--- a/tmux.conf
+++ b/tmux.conf
@@ -74,7 +74,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
 
-#set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-strategy-nvim 'session'
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_middle_separator " | "
