--- a/tmux.conf
+++ b/tmux.conf
@@ -96,7 +96,7 @@ set -g @catppuccin_pane_border_status "top"
 set -g @catppuccin_pane_left_separator ""
 set -g @catppuccin_pane_right_separator ""
 set -g @catppuccin_pane_middle_separator " | "
-set -g @catppuccin_pane_number_position "left"
+set -g @catppuccin_pane_number_position "right"
 set -g @catppuccin_pane_default_fill "all"
 set -g @catppuccin_pane_default_text '#{s|#{HOME}|~|:pane_current_path}'
 
