--- a/tmux.conf
+++ b/tmux.conf
@@ -75,19 +75,19 @@ set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
 
 set -g @resurrect-strategy-nvim 'session'
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " | "
-set -g @catppuccin_window_number_position "left"
+set -g @catppuccin_window_left_separator " "
+set -g @catppuccin_window_right_separator ""
+set -g @catppuccin_window_middle_separator " "
+set -g @catppuccin_window_number_position "right"
 set -g @catppuccin_window_default_fill "none"
 set -g @catppuccin_window_default_text '#{s|#{HOME}|~|:pane_current_path}' 
-set -g @catppuccin_window_current_fill "all"
+set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text '#{s|#{HOME}|~|:pane_current_path}' 
 set -g @catppuccin_status_modules_right "application session date_time"
 set -g @catppuccin_status_left_separator  ""
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_right_separator_inverse "yes"
-set -g @catppuccin_status_fill "all"
+set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
 set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M %p"
 
