Use FiraMono Nerd Font so that block characters cover entire line height. Cleared @catppuccin-* options before setting up catppuccin theme

--- a/tmux.conf
+++ b/tmux.conf
@@ -59,11 +59,18 @@ bind -N "Switch to next session and kill current session" C-x \
 # reload config file
 bind -N "Re-run tmux configuration file" R source-file ~/.config/tmux/tmux.conf
 
+# 
+
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.tmux/plugins"
-## catppuccin theme requires nerd font - I am using MesloGLDZ Nerd Font Mono
+## catppuccin theme requires nerd font - I am using FiraMono Nerd Font Mono
 ## Installed via: 
 ##    brew install --cask homebrew/cask-fonts/font-fira-mono-nerd-font
+
 set -g @plugin 'catppuccin/tmux'
+## Clear pre-existing @catppuccin options
+run-shell "eval \"$(tmux show-options -g|grep \"^@catppuccin\"|gsed -r -e \"s/(@catppuccin_\\S+)\\s+.*$/tmux set-option -gu \\1/\")\""
+set -g @catppuccin_flavour 'mocha'
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -75,18 +82,17 @@ set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
 
 set -g @resurrect-strategy-nvim 'session'
-set -g @catppuccin_window_left_separator " "
+
+## KH Config
 set -g @catppuccin_window_right_separator ""
-set -g @catppuccin_window_middle_separator " "
+set -g @catppuccin_window_middle_separator " █"
 set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_default_fill "none"
+set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_default_text '#{s|#{HOME}|~|:pane_current_path}' 
 set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text '#{s|#{HOME}|~|:pane_current_path}' 
 set -g @catppuccin_status_modules_right "application session date_time"
 set -g @catppuccin_status_left_separator  ""
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_right_separator_inverse "no"
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
 set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M %p"
@@ -99,6 +105,49 @@ set -g @catppuccin_pane_middle_separator " | "
 set -g @catppuccin_pane_number_position "right"
 set -g @catppuccin_pane_default_fill "all"
 set -g @catppuccin_pane_default_text '#{s|#{HOME}|~|:pane_current_path}'
+
+## Config 1 from catppuccin tmux in github
+# set -g @catppuccin_window_right_separator "█ "
+# set -g @catppuccin_window_number_position "right"
+# set -g @catppuccin_window_middle_separator " | "
+# set -g @catppuccin_window_default_fill "none"
+# set -g @catppuccin_window_current_fill "all"
+# set -g @catppuccin_status_modules_right "application session user host date_time"
+# set -g @catppuccin_status_left_separator "█"
+# set -g @catppuccin_status_right_separator "█"
+# set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
+
+## Config 2 from catppuccin tmux in github
+# set -g @catppuccin_window_left_separator "█"
+# set -g @catppuccin_window_right_separator "█ "
+# set -g @catppuccin_window_number_position "right"
+# set -g @catppuccin_window_middle_separator "  █"
+# set -g @catppuccin_window_default_fill "number"
+# set -g @catppuccin_window_current_fill "number"
+# set -g @catppuccin_window_current_text "#{pane_current_path}"
+# set -g @catppuccin_status_modules_right "application session date_time"
+# set -g @catppuccin_status_left_separator  ""
+# set -g @catppuccin_status_right_separator " "
+# set -g @catppuccin_status_right_separator_inverse "yes"
+# set -g @catppuccin_status_fill "all"
+# set -g @catppuccin_status_connect_separator "no"
+
+## Config 3 from catppuccin tmux in github
+# set -g @catppuccin_window_left_separator ""
+# set -g @catppuccin_window_right_separator " "
+# set -g @catppuccin_window_middle_separator " █"
+# set -g @catppuccin_window_number_position "right"
+# set -g @catppuccin_window_default_fill "number"
+# set -g @catppuccin_window_default_text "#W"
+# set -g @catppuccin_window_current_fill "number"
+# set -g @catppuccin_window_current_text "#W"
+# set -g @catppuccin_status_modules_right "directory user host session"
+# set -g @catppuccin_status_left_separator  " "
+# set -g @catppuccin_status_right_separator ""
+# set -g @catppuccin_status_right_separator_inverse "no"
+# set -g @catppuccin_status_fill "icon"
+# set -g @catppuccin_status_connect_separator "no"
+# set -g @catppuccin_directory_text "#{pane_current_path}"
 
 if-shell "tmux -f /dev/null -L temp start-server \;" {
 } {
