Updated comments on evaluating vim-tmux-navigator

--- a/tmux.conf
+++ b/tmux.conf
@@ -75,7 +75,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-## TODO: Consider installing vim-tmux-navigator
+## EVALUATED: Consider installing vim-tmux-navigator
+##   Decided not to install - it does not work well in
+##   nested tmux sessions
 #set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
