--- a/tmux.conf
+++ b/tmux.conf
@@ -41,6 +41,12 @@ bind -N "Split window horizontally" h split-window -h
 unbind '"'
 unbind %
 
+# Use vim-motions like keys to switch panes
+bind -r -N "Select the pane above the active pane" C-j   select-pane -U
+bind -r -N "Select the pane below the active pane" C-k   select-pane -D
+bind -r -N "Select the pane to the left of the active pane" C-h   select-pane -L
+bind -r -N "Select the pane to the right of the active pane" C-l   select-pane -R
+
 bind -N "Start a new session" S new-session
 
 bind -N "Join pane to window" @ command-prompt -T window-target -p "Join Win_#{window_index}:Pane_#P to window:" { join-pane -t ":%%" }
