Added support for nvim-tmux navigation support and improved movement between panes

--- a/tmux.conf
+++ b/tmux.conf
@@ -41,12 +41,6 @@ bind -N "Split window horizontally" h split-window -h
 unbind '"'
 unbind %
 
-# Use vim-motions like keys to switch panes
-bind -r -N "Select the pane above the active pane" C-j   select-pane -U
-bind -r -N "Select the pane below the active pane" C-k   select-pane -D
-bind -r -N "Select the pane to the left of the active pane" C-h   select-pane -L
-bind -r -N "Select the pane to the right of the active pane" C-l   select-pane -R
-
 bind -N "Start a new session" S new-session
 
 bind -N "Join pane to window" @ command-prompt -T window-target -p "Join Win_#{window_index}:Pane_#P to window:" { join-pane -t ":%%" }
@@ -81,10 +75,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-## EVALUATED: Consider installing vim-tmux-navigator
-##   Decided not to install - it does not work well in
-##   nested tmux sessions
-#set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
 
