Improved look of window status line

--- a/tmux.conf
+++ b/tmux.conf
@@ -84,7 +84,10 @@ set -g @resurrect-strategy-nvim 'session'
 ## KH Config
 set -g @catppuccin_window_right_separator ""
 #set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_middle_separator " "
+set -g @catppuccin_window_middle_separator "▐"
+#set -g @catppuccin_window_middle_separator " "
+#set -g @catppuccin_window_middle_separator "  "
+#set -g @catppuccin_window_middle_separator " ▕"
 set -g @catppuccin_window_number_position "right"
 set -g @catppuccin_window_default_fill "none"
 set -g @catppuccin_window_default_text '#{s|#{HOME}|~|:pane_current_path}' 
