--- a/tmux.conf
+++ b/tmux.conf
@@ -67,7 +67,7 @@ set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.tmux/plugins"
 
 set -g @plugin 'catppuccin/tmux'
 ## Clear pre-existing @catppuccin options
-run-shell "eval \"$(tmux show-options -g|grep \"^@catppuccin\"|gsed -r -e \"s/(@catppuccin_\\S+)\\s+.*$/tmux set-option -gu \\1/\")\""
+run-shell "eval \"$(tmux show-options -g|grep \"^@catppuccin\"|sed -r -e \"s/(@catppuccin_\\S+)\\s+.*$/tmux set-option -gu \\1/\")\""
 set -g @catppuccin_flavour 'mocha'
 
 set -g @plugin 'tmux-plugins/tpm'
