--- a/tmux.conf
+++ b/tmux.conf
@@ -76,7 +76,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @continuum-boot 'on'
+set -g @continuum-boot 'off'
 set -g @continuum-restore 'on'
 
 set -g @resurrect-strategy-nvim 'session'
