Moved set-environment -g TMUX_PLUGIN_MANAGER_PATH to be the first line to be executed

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
+# This should be the first line
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.tmux/plugins"
+
 ## reset key bindings first
 run-shell "~/.config/tmux/get_default_tmux.zsh"
 
@@ -60,10 +63,8 @@ bind -N "Re-run tmux configuration file" R source-file ~/.config/tmux/tmux.conf
 
 # 
 
-set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.tmux/plugins"
 ## catppuccin theme requires nerd font - I am using FiraMono Nerd Font Mono
-## Installed via: 
-##    brew install --cask homebrew/cask-fonts/font-fira-mono-nerd-font
+## Installed via Nix
 
 set -g @plugin 'catppuccin/tmux'
 ## Clear pre-existing @catppuccin options
