Disabled continuum-boot option in tmux Replaced tmux-continuum login startup script to work correctly in multi-monitor setup. Removed running of other tmux plugins because the tpm will execute those plugins.

--- a/tmux.conf
+++ b/tmux.conf
@@ -77,7 +77,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @continuum-boot 'on'
+set -g @continuum-boot 'off'
 set -g @continuum-restore 'on'
 
 set -g @resurrect-strategy-nvim 'session'
@@ -160,9 +160,7 @@ if-shell "tmux -f /dev/null -L temp start-server \;" {
 }
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# With tpm running, there is no need to run the other plugins as these plugins will be
+# started by tpm
 run '~/.tmux/plugins/tpm/tpm'
-run '~/.tmux/plugins/tmux-sensible/sensible.tmux'
-run '~/.tmux/plugins/tmux-yank/yank.tmux'
-run '~/.tmux/plugins/tmux-resurrect/resurrect.tmux'
-run '~/.tmux/plugins/tmux-continuum/continuum.tmux'
 
