--- a/tmux.conf
+++ b/tmux.conf
@@ -155,7 +155,7 @@ set -g @catppuccin_pane_default_text '#{s|#{HOME}|~|:pane_current_path}'
 if-shell "tmux -f /dev/null -L temp start-server \;" {
 } {
     if-shell "[[ $(uname) == 'Darwin' ]]" {
-        set-environment -g PATH "/opt/homebrew/bin:/bin:/usr/bin:/usr/local/bin:/sbin:/usr/sbin"
+        set-environment -g PATH "$HOME/.nix-profile/bin:/run/current-system/sw/bin:/bin:/usr/bin:/usr/local/bin:/sbin:/usr/sbin"
     }
 }
 
