Changed deprecated @catppuccin_flavour to @catppuccin_flavor

--- a/tmux.conf
+++ b/tmux.conf
@@ -69,7 +69,7 @@ bind -N "Re-run tmux configuration file" R source-file ~/.config/tmux/tmux.conf
 set -g @plugin 'catppuccin/tmux'
 ## Clear pre-existing @catppuccin options
 run-shell "eval \"$(tmux show-options -g|grep \"^@catppuccin\"|sed -r -e \"s/(@catppuccin_\\S+)\\s+.*$/tmux set-option -gu \\1/\")\""
-set -g @catppuccin_flavour 'mocha'
+set -g @catppuccin_flavor 'mocha'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
