--- a/tmux.conf
+++ b/tmux.conf
@@ -25,6 +25,7 @@ set-option -sa terminal-features ",screen-256color:RGB"
 
 
 set -g status-position top
+set -gF status-right "#{E:@catppuccin_status_date_time}"
 
 # Increase scrollback buffer size from 2000 to 50000 lines
 set-option -g history-limit 100000
@@ -83,25 +84,31 @@ set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
 
 ## KH Config
-set -g @catppuccin_window_right_separator ""
+#set -g @catppuccin_window_right_separator ""
 #set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_middle_separator "▐"
+#set -g @catppuccin_window_middle_separator "▐"
 #set -g @catppuccin_window_middle_separator " "
 #set -g @catppuccin_window_middle_separator "  "
 #set -g @catppuccin_window_middle_separator " ▕"
+set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_menu_selected_style "fg=#{@thm_surface_0},bg=#{@thm_yellow}"
+
 set -g @catppuccin_window_number_position "right"
 set -g @catppuccin_window_default_fill "none"
 set -g @catppuccin_window_default_text '#{s|#{HOME}|~|:pane_current_path}' 
 set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text '#{s|#{HOME}|~|:pane_current_path}' 
-set -g @catppuccin_status_modules_right "application session date_time"
-set -g @catppuccin_status_left_separator  ""
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
+#set -g @catppuccin_status_modules_right "application session date_time"
+#set -g @catppuccin_status_modules_right "#{E:@catppuccin_status_application}#{E:@catppuccin_status_session}#{E:@catppuccin_status_date_time}"
+
+
+# set -g @catppuccin_status_left_separator  ""
+set -g @catppuccin_status_fill "all"  # "icon"
+set -g @catppuccin_status_connect_separator "yes"
 set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M %p"
 
-set -g @catppuccin_pane_status_enabled "yes"
-set -g @catppuccin_pane_border_status "top"
+set -g @catppuccin_pane_status_enabled "no"
+set -g @catppuccin_pane_border_status "off"
 set -g @catppuccin_pane_left_separator ""
 set -g @catppuccin_pane_right_separator ""
 set -g @catppuccin_pane_middle_separator " | "
