--- a/tmux.conf
+++ b/tmux.conf
@@ -25,7 +25,12 @@ set-option -sa terminal-features ",screen-256color:RGB"
 
 
 set -g status-position top
-set -gF status-right "#{E:@catppuccin_status_date_time}"
+## TODO: Figure out how to customize status modules
+#set -g @catppuccin_directory_color "#{E:@thm_yellow}"
+#set -g @catppuccin_directory_text "#{d:pane_current_path}"
+set -g status-right "#{E:@catppuccin_status_application}#{E:@catppuccin_status_session}#{E:@catppuccin_status_date_time}"
+set -g status-left ""
+set -g pane-border-status "bottom"
 
 # Increase scrollback buffer size from 2000 to 50000 lines
 set-option -g history-limit 100000
@@ -91,15 +96,12 @@ set -g @resurrect-strategy-nvim 'session'
 #set -g @catppuccin_window_middle_separator "  "
 #set -g @catppuccin_window_middle_separator " ▕"
 set -g @catppuccin_window_status_style "rounded"
-set -g @catppuccin_menu_selected_style "fg=#{@thm_surface_0},bg=#{@thm_yellow}"
 
 set -g @catppuccin_window_number_position "right"
 set -g @catppuccin_window_default_fill "none"
 set -g @catppuccin_window_default_text '#{s|#{HOME}|~|:pane_current_path}' 
 set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text '#{s|#{HOME}|~|:pane_current_path}' 
-#set -g @catppuccin_status_modules_right "application session date_time"
-#set -g @catppuccin_status_modules_right "#{E:@catppuccin_status_application}#{E:@catppuccin_status_session}#{E:@catppuccin_status_date_time}"
 
 
 # set -g @catppuccin_status_left_separator  ""
@@ -107,14 +109,15 @@ set -g @catppuccin_status_fill "all"  # "icon"
 set -g @catppuccin_status_connect_separator "yes"
 set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M %p"
 
-set -g @catppuccin_pane_status_enabled "no"
-set -g @catppuccin_pane_border_status "off"
+set -g @catppuccin_pane_status_enabled "yes"
 set -g @catppuccin_pane_left_separator ""
 set -g @catppuccin_pane_right_separator ""
-set -g @catppuccin_pane_middle_separator " | "
+set -g @catppuccin_pane_middle_separator "█"
 set -g @catppuccin_pane_number_position "right"
 set -g @catppuccin_pane_default_fill "all"
 set -g @catppuccin_pane_default_text '#{s|#{HOME}|~|:pane_current_path}'
+set -g @catppuccin_pane_border_style "fg=#{@thm_surface_0}" # Use a value compatible with the standard tmux 'pane-border-style'
+set -g @catppuccin_pane_active_border_style "fg=#{@thm_peach}" # Use a value compatible with the standard tmux 'pane-border-active-style'
 
 ## Config 1 from catppuccin tmux in github
 # set -g @catppuccin_window_right_separator "█ "
