More fixes for the catppuccin tmux theme setup

--- a/tmux.conf
+++ b/tmux.conf
@@ -25,9 +25,6 @@ set-option -sa terminal-features ",screen-256color:RGB"
 
 
 set -g status-position top
-## TODO: Figure out how to customize status modules
-#set -g @catppuccin_directory_color "#{E:@thm_yellow}"
-#set -g @catppuccin_directory_text "#{d:pane_current_path}"
 set -g status-right "#{E:@catppuccin_status_application}#{E:@catppuccin_status_session}#{E:@catppuccin_status_date_time}"
 set -g status-left ""
 set -g pane-border-status "bottom"
@@ -72,7 +69,8 @@ bind -N "Re-run tmux configuration file" R source-file ~/.config/tmux/tmux.conf
 ## catppuccin theme requires nerd font - I am using FiraMono Nerd Font Mono
 ## Installed via Nix
 
-set -g @plugin 'catppuccin/tmux'
+#set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'khsoh/ctpcntmux'
 ## Clear pre-existing @catppuccin options
 run-shell "eval \"$(tmux show-options -g|grep \"^@catppuccin\"|sed -r -e \"s/(@catppuccin_\\S+)\\s+.*$/tmux set-option -gu \\1/\")\""
 set -g @catppuccin_flavor 'mocha'
@@ -99,9 +97,9 @@ set -g @catppuccin_window_status_style "rounded"
 
 set -g @catppuccin_window_number_position "right"
 set -g @catppuccin_window_default_fill "none"
-set -g @catppuccin_window_default_text '#{s|#{HOME}|~|:pane_current_path}' 
+set -g @catppuccin_window_default_text '#{s|#{HOME}|~|:pane_current_path} ' 
 set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text '#{s|#{HOME}|~|:pane_current_path}' 
+set -g @catppuccin_window_current_text '#{s|#{HOME}|~|:pane_current_path} ' 
 
 
 # set -g @catppuccin_status_left_separator  ""
@@ -113,11 +111,13 @@ set -g @catppuccin_pane_status_enabled "yes"
 set -g @catppuccin_pane_left_separator ""
 set -g @catppuccin_pane_right_separator ""
 set -g @catppuccin_pane_middle_separator "█"
+# set -g @catppuccin_pane_middle_separator "|"
 set -g @catppuccin_pane_number_position "right"
 set -g @catppuccin_pane_default_fill "all"
 set -g @catppuccin_pane_default_text '#{s|#{HOME}|~|:pane_current_path}'
 set -g @catppuccin_pane_border_style "fg=#{@thm_surface_0}" # Use a value compatible with the standard tmux 'pane-border-style'
 set -g @catppuccin_pane_active_border_style "fg=#{@thm_peach}" # Use a value compatible with the standard tmux 'pane-border-active-style'
+set -g @catppuccin_pane_color "#{@thm_peach}"
 
 ## Config 1 from catppuccin tmux in github
 # set -g @catppuccin_window_right_separator "█ "
