Re-instated original catppuccin/tmux plugin as bug has been fixed

--- a/tmux.conf
+++ b/tmux.conf
@@ -69,8 +69,8 @@ bind -N "Re-run tmux configuration file" R source-file ~/.config/tmux/tmux.conf
 ## catppuccin theme requires nerd font - I am using FiraMono Nerd Font Mono
 ## Installed via Nix
 
-#set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'khsoh/ctpcntmux'
+set -g @plugin 'catppuccin/tmux'
+#set -g @plugin 'khsoh/ctpcntmux'
 ## Clear pre-existing @catppuccin options
 run-shell "eval \"$(tmux show-options -g|grep \"^@catppuccin\"|sed -r -e \"s/(@catppuccin_\\S+)\\s+.*$/tmux set-option -gu \\1/\")\""
 set -g @catppuccin_flavor 'mocha'
