--- a/tmux.conf
+++ b/tmux.conf
@@ -114,10 +114,11 @@ set -g @catppuccin_pane_middle_separator "█"
 # set -g @catppuccin_pane_middle_separator "|"
 set -g @catppuccin_pane_number_position "right"
 set -g @catppuccin_pane_default_fill "all"
-set -g @catppuccin_pane_default_text '#{s|#{HOME}|~|:pane_current_path}'
+set -g @catppuccin_pane_default_text '##{s|#{HOME}|~|:pane_current_path}'
 set -g @catppuccin_pane_border_style "fg=#{@thm_surface_0}" # Use a value compatible with the standard tmux 'pane-border-style'
 set -g @catppuccin_pane_active_border_style "fg=#{@thm_peach}" # Use a value compatible with the standard tmux 'pane-border-active-style'
-set -g @catppuccin_pane_color "#{@thm_peach}"
+set -g @catppuccin_pane_background_color "##{?pane_active,#{@thm_surface_0},#{@thm_peach}}"
+set -g @catppuccin_pane_color "##{?pane_active,#{@thm_peach},#{@thm_surface_0}}"
 
 ## Config 1 from catppuccin tmux in github
 # set -g @catppuccin_window_right_separator "█ "
