Updated tmux.conf to support tmux submodule

--- a/tmux.conf
+++ b/tmux.conf
@@ -25,7 +25,7 @@ set-option -sa terminal-features ",screen-256color:RGB"
 
 
 set -g status-position top
-set -g status-right "#{E:@catppuccin_status_application}#{E:@catppuccin_status_session}#{E:@catppuccin_status_date_time}"
+set -gF status-right "#{E:@catppuccin_status_application}#{E:@catppuccin_status_session}#{E:@catppuccin_status_cpu}#{E:@catppuccin_status_ram}"
 set -g status-left ""
 set -g pane-border-status "bottom"
 
@@ -75,7 +75,9 @@ set -g @plugin 'catppuccin/tmux'
 run-shell "eval \"$(tmux show-options -g|grep \"^@catppuccin\"|sed -r -e \"s/(@catppuccin_\\S+)\\s+.*$/tmux set-option -gu \\1/\")\""
 set -g @catppuccin_flavor 'mocha'
 
+
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -85,6 +87,8 @@ set -g @continuum-boot 'off'
 set -g @continuum-restore 'on'
 
 set -g @resurrect-strategy-nvim 'session'
+
+set -g @catppuccin_cpu_color "#{@thm_yellow}"
 
 ## KH Config
 #set -g @catppuccin_window_right_separator ""
@@ -102,7 +106,7 @@ set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text '#{s|#{HOME}|~|:pane_current_path} ' 
 
 
-# set -g @catppuccin_status_left_separator  ""
+set -g @catppuccin_status_left_separator  ""
 set -g @catppuccin_status_fill "all"  # "icon"
 set -g @catppuccin_status_connect_separator "yes"
 set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M %p"
@@ -119,6 +123,13 @@ set -g @catppuccin_pane_border_style "fg=#{@thm_surface_0}" # Use a value compat
 set -g @catppuccin_pane_active_border_style "fg=#{@thm_peach}" # Use a value compatible with the standard tmux 'pane-border-active-style'
 set -g @catppuccin_pane_background_color "##{?pane_active,#{@thm_surface_0},#{@thm_peach}}"
 set -g @catppuccin_pane_color "##{?pane_active,#{@thm_peach},#{@thm_surface_0}}"
+
+### Add support for RAM status via the tmux-cpu plugin
+%hidden MODULE_NAME="ram"
+set -ogq    @catppuccin_ram_icon "#{l:#{ram_icon}} "
+set -ogqF   @catppuccin_ram_color "#{@thm_blue}"
+set -ogq    @catppuccin_ram_text "#{l:#{ram_percentage}}"
+source -F "~/.tmux/plugins/tmux/utils/status_module.conf"
 
 ## Config 1 from catppuccin tmux in github
 # set -g @catppuccin_window_right_separator "█ "
