--- a/tmux.conf
+++ b/tmux.conf
@@ -129,7 +129,7 @@ set -g @catppuccin_pane_color "##{?pane_active,#{@thm_peach},#{@thm_surface_0}}"
 set -ogq    @catppuccin_ram_icon "#{l:#{ram_icon}} "
 set -ogqF   @catppuccin_ram_color "#{@thm_blue}"
 set -ogq    @catppuccin_ram_text "#{l:#{ram_percentage}}"
-source -F "~/.tmux/plugins/tmux/utils/status_module.conf"
+source "$TMUX_PLUGIN_MANAGER_PATH/tmux/utils/status_module.conf"
 
 ## Config 1 from catppuccin tmux in github
 # set -g @catppuccin_window_right_separator "█ "
@@ -184,5 +184,5 @@ if-shell "tmux -f /dev/null -L temp start-server \;" {
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # With tpm running, there is no need to run the other plugins as these plugins will be
 # started by tpm
-run '~/.tmux/plugins/tpm/tpm'
+run "$TMUX_PLUGIN_MANAGER_PATH/tpm/tpm"
 
