Removed -v flag from source-file command

--- a/tmux.conf
+++ b/tmux.conf
@@ -129,7 +129,7 @@ set -g @catppuccin_pane_color "##{?pane_active,#{@thm_peach},#{@thm_surface_0}}"
 set -ogq    @catppuccin_ram_icon "#{l:#{ram_icon}} "
 set -ogqF   @catppuccin_ram_color "#{@thm_blue}"
 set -ogq    @catppuccin_ram_text "#{l:#{ram_percentage}}"
-source -v -F "~/.tmux/plugins/tmux/utils/status_module.conf"
+source -F "~/.tmux/plugins/tmux/utils/status_module.conf"
 
 ## Config 1 from catppuccin tmux in github
 # set -g @catppuccin_window_right_separator "█ "
