--- a/tmux.conf
+++ b/tmux.conf
@@ -25,7 +25,8 @@ set-option -sa terminal-features ",screen-256color:RGB"
 
 
 set -g status-position top
-set -gF status-right "#{E:@catppuccin_status_application}#{E:@catppuccin_status_session}#{E:@catppuccin_status_cpu}#{E:@catppuccin_status_ram}"
+set -g status-right "#{E:@catppuccin_status_application}#{E:@catppuccin_status_session}"
+set -agF status-right "#{E:@catppuccin_status_cpu}#{E:@catppuccin_status_ram}"
 set -g status-left ""
 set -g pane-border-status "bottom"
 
