Updated tmux.conf to re-parse itself twice during initial startup

--- a/tmux.conf
+++ b/tmux.conf
@@ -187,3 +187,22 @@ if-shell "tmux -f /dev/null -L temp start-server \;" {
 # started by tpm
 run "~/.tmux/plugins/tpm/tpm"
 
+%if "#{active_window_index}"
+    %if "#{hook}"
+        %if "#{window-linked}"
+            display-message -d 5000 "Window linked - second pass of #{current_file}"
+            run "tmux set-hook -g session-created \"source-file #{current_file}\""
+            set-hook -ug window-linked
+        %else
+            display-message -d 5000 "Session created - last pass of #{current_file}"
+            set-hook -ug session-created
+        %endif
+    %endif
+%else
+
+  # First time startup - set the hook
+  # Using run-shell to set hook so that #{current_file} can be expanded
+  # because the command string argument does not seem to be able to be expanded
+  run "tmux set-hook -g window-linked \"source-file #{current_file}\""
+%endif
+
