Changed default window name to use current command

--- a/tmux.conf
+++ b/tmux.conf
@@ -102,7 +102,7 @@ set -g @catppuccin_window_status_style "rounded"
 
 set -g @catppuccin_window_number_position "right"
 set -g @catppuccin_window_default_fill "none"
-set -g @catppuccin_window_default_text '#{s|#{HOME}|~|:pane_current_path} ' 
+set -g @catppuccin_window_default_text '#{pane_current_command} '
 set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text '#{s|#{HOME}|~|:pane_current_path} ' 
 
